--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       class="fixed sm:static w-full -top-[100%] sm:insert-0 left-0 h-full   bg-[#282C33]  p-4 sm:p-0 transition-top 0.3s ease-in-out z-50  sm:z-auto sm:transition-none"
       id="nav-menu">
       <div class="flex items-center gap-2  sm:hidden">
-        <img src="Images/Union.png" class="w-4">
+        <img src="images/Union.png" class="w-4">
         <p class="font-bold w-12">David</p>
       </div>
 
