--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="flex  justify-between  md:mx-0 mx-4  md:mt-0 mt-5 items-center md:mb-0 mb-20">
 
       <div class="flex items-center  ml-2 gap-2 lg:mr-32 xl:mr-[24rem] lg:-ml-8 xl:ml-[7.3rem]   md:ml-20 md:mr-24">
-        <img src="Images/Union.png" class="w-4">
+        <img src="images/Union.png" class="w-4">
         <p class="font-bold w-12">David</p>
       </div>
 
