--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
       <div class="flex justify-center sm:hidden gap-4 pt-10">
-        <a href="https://github.com/DE-WebDev">
+        <a href="https://github.com/ERIKEFE-DAVID">
           <img src="images/Github.png" alt="github" class=" w-[64px]" title="github">
         </a>
         <a href="https://dribbble.com/Dave-07">
@@ -76,7 +76,7 @@
     <div class="md:flex">
       <div class="lg:ml-4 md:ml-6 xl:ml-5 -mt-[2.8rem] hidden md:block ">
         <img src="images/Line 10 (Stroke) (1).png" class="ml-3 mb-1 md:h-36  lg:h-48" alt="line">
-        <a href="https://github.com/DE-WebDev">
+        <a href="https://github.com/ERIKEFE-DAVID">
           <img src="images/Github.png" alt="github" class="mb-3 max-w-md" title="github">
         </a>
         <a href="https://dribbble.com/Dave-07">
@@ -333,7 +333,7 @@
       <div class="w-fit md:mr-20 md:-mr-28 xl:mr-auto xl:ml-48">
         <h1 class="font-medium text-[24px]">Media</h1>
         <div class="flex mt-2 gap-2">
-             <a href="https://github.com/DE-WebDev">
+             <a href="https://github.com/ERIKEFE-DAVID">
           <img src="images/Github.png" alt="github" class=" " title="github">
         </a>
         <a
